<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quickorder</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="quickorder">QuickOrder</string>
    <string name="log_in">Log in</string>
    <string name="go_offline">Go offline</string>
    <string name="_0_00">€ 0.00</string>
    <string name="saldo">Saldo</string>
    <string name="total">Total</string>
    <string name="bestel">Bestel</string>
    <string name="clubs">Clubs</string>

</resources>
